feat: implementar relacionamento entre Pedido e Item com persistência via PedidoRepository
- Criada entidade Item com mapeamento JPA (tabela "itens");
- Adicionado relacionamento OneToMany de Pedido para Item, com cascade ALL e orphanRemoval true;
- Pedido agora armazena mapa de produtos e quantidades via objetos Item, não mais Map<Produto, Integer>;
- Corrigido acesso aos produtos do pedido com base na entidade Item;
- Removida dependência de instanciar service para salvar pedidos, utilizando diretamente PedidoRepository;
- Adicionadas validações e tratamento de ID nulo para produtos em criação de pedidos;
- Ajustes no controller para refletir a nova estrutura de persistência e entidades.